# filewalk

./: CMakeLists.txt  filetree.c  filetree.h  main.c
cmake/: FindGLIB.cmake
testfiles/: testlinked2
testfiles/test1/: testlinked
